styles/styles.css
/* ------------------------------------------- */
/* Fonts */
/* ------------------------------------------- */
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");

/* ------------------------------------------- */
/* Reusable Styles and Utilities */
/* ------------------------------------------- */
body {
  font-family: "Poppins", sans-serif;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

header,
main,
footer {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.container {
  width: 1200px;
}

.btn {
  text-decoration: none;
  width: 168px;
  height: 44px;
  color: white;
  padding: 10px 24px;
  background-color: #e02c6d;
  transition: all 0.5s;
  display: flex;
  align-items: center;
}

.btn span {
  transition: all 0.5s;
  margin-left: 8px;
}

.btn:hover span {
  margin-left: 16px;
}

.btn:hover {
  background-color: #ffffff;
  color: #e02c6d;
  transform: scale(1.05);
}

/* ------------------------------------------- */
/* Header section Start */
/* ------------------------------------------- */
header {
  background-color: #2d25a0;
  color: #ffffff;
}

.header-content {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.header-title {
  margin-bottom: 32px;
  font-size: 64px;
  line-height: 80px;
  font-weight: 700;
}

.header-intro {
  width: 485px;
  margin-right: 102px;
}

.header-hero-img img {
  width: 556.01px;
  height: 438px;
  display: block;
  transition: transform 0.7s;
}

.header-hero-img img:hover {
  transform: scale(1.07);
}
/* ------------------------------------------- */
/* Header section End */
/* ------------------------------------------- */

/* ------------------------------------------- */
/* Player Section Start */
/* ------------------------------------------- */
.player-section {
  margin-top: 70px;
}

.players-list {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  row-gap: 27px;
  place-items: center;
}

.player {
  width: 330px;
  height: 474px;
  background-color: #ffffff;
  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
  padding: 15px;
  cursor: pointer;
  transition: all 0.4s;
}

.player:hover {
  transform: translateY(-10px) scale(1.01);
}

.player-img img {
  width: 100%;
  height: 100%;
}

.player-name {
  font-weight: bold;
  font-size: 28px;
  line-height: 40px;
  color: #18191f;
  margin: 16px 0 10px 0;
}

.player-details {
  font-size: 16px;
  line-height: 26px;
  font-weight: 400;
  color: #6c6c6c;
}

/* ------------------------------------------- */
/* Player Section End */
/* ------------------------------------------- */

/* ------------------------------------------- */
/* Highlights Section Start */
/* ------------------------------------------- */
.highlights-section {
  margin: 165px 0 158px 0;
}

.highlights-content {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.highlights-img img {
  width: 567px;
  height: 427px;
}

.highlights-title {
  font-size: 48px;
  line-height: 60px;
  font-weight: bold;
  margin-bottom: 8px;
}

.highlights-intro {
  margin-right: 66px;
}

.highlights-details {
  margin: 8px 0 24px 0;
  width: 404px;
  height: 113px;
}
/* ------------------------------------------- */
/* Highlights Seciton End */
/* ------------------------------------------- */

/* ------------------------------------------- */
/* Gallery Seciton Start */
.gallery {
  margin-bottom: 100px;
}

.gallery-img-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  row-gap: 5px;
  column-gap: 5px;
}

.gallery-title {
  font-size: 48px;
  line-height: 60px;
  font-weight: bold;
  margin-bottom: 30px;
  text-align: center;
}

.gallery-img-grid img {
  width: 300px;
  height: 300px;
  cursor: pointer;
  transition: all 0.4s;
  border-radius: 5px;
}

.gallery-img-grid img:hover {
  transform: scale(1.09) translateY(-10px);
}

/* Gallery Seciton End */
/* ------------------------------------------- */

/* ------------------------------------------- */
/* SignUp Seciton Start */
/* ------------------------------------------- */
.signup-section {
  margin-bottom: 100px;
}

.signup-title {
  font-size: 48px;
  line-height: 60px;
  font-weight: bold;
  margin-bottom: 8px;
}

.signup-content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.input-wrapper input {
  border: 2px solid #e02c6d;
  padding: 10px;
  margin-top: 20px;
}

.input-wrapper input:focus {
  outline: none;
}

.input-wrapper button {
  border: none;
  padding: 12px;
  background-color: #e02c6d;
  color: #fff;
  text-transform: uppercase;
  letter-spacing: 1px;
  cursor: pointer;
  margin-left: -5px;
}

/* ------------------------------------------- */
/* SignUp Seciton End */
/* ------------------------------------------- */

/* ------------------------------------------- */
/* Footer Section Start*/
/* ------------------------------------------- */
footer {
  margin-bottom: 63px;
}
.footer-content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.footer-logo img {
  width: 483.87px;
  height: 110px;
}

.social-icons {
  margin: 15px 0 20px 0;
}

.social-icons img {
  width: 32px;
  height: 32px;
}

.copyright {
  font-size: 18px;
  line-height: 24px;
  font-weight: 400;
  color: #000000;
}
/* ------------------------------------------- */
/* Footer Section End */
/* ------------------------------------------- */

/* ------------------------------------------- */
/* ------------------------------------------- */
/* MEDIA QUERIES */
/* ------------------------------------------- */
/* ------------------------------------------- */

@media only screen and (max-width: 922px) {
  .container {
    width: 100%;
  }

  /* Header */
  .header-content {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .header-intro {
    padding-left: 16px;
    width: 100%;
    margin-right: 0;
    margin-top: 116px;
  }
  .header-title {
    font-size: 36px;
    line-height: 50px;
  }
  .btn {
    font-size: 16px;
  }
  .header-hero-img img {
    width: 329px;
    height: 259.17px;
    margin: 50px 0px 60px 0;
  }

  /* Players */
  .players-list {
    display: grid;
    grid-template-columns: 1fr 1fr;
    row-gap: 27px;
    column-gap: 27px;
  }

  .player-name {
    font-size: 28px;
  }

  /* Highlights */
  .highlights-section {
    margin: 60px 0 60px 0;
  }

  .highlights-title {
    font-size: 30px;
    line-height: 40px;
  }

  .highlights-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .highlights-intro {
    margin-bottom: 29px;
    margin-right: 0;
  }

  .highlights-img img {
    width: 428px;
    height: 248px;
  }

  .highlights-details {
    margin: 8px 0 24px 0;
    width: 700px;
    height: 113px;
  }

  /* Gallery */
  .gallery-title {
    font-size: 30px;
    line-height: 40px;
  }

  .gallery-img-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    place-items: center;
  }

  /* Signup */
  .signup-title {
    font-size: 30px;
    line-height: 40px;
  }

  .signup-content {
    padding: 16px;
  }

  /* Footer */
  .footer-logo img {
    width: 275px;
    height: 60px;
  }
}

@media only screen and (max-width: 688px) {
  .players-list {
    display: grid;
    grid-template-columns: 1fr;
    row-gap: 27px;
  }

  .gallery-img-grid {
    display: grid;
    grid-template-columns: 1fr;
    place-items: center;
  }

  .highlights-img img {
    width: 428px;
    height: 248px;
  }

  .highlights-details {
    margin: 8px 0 24px 0;
    width: 400px;
    height: 113px;
  }
}

